# PMeter

./: pyproject.toml  readme.md  verify.html
examples/: demo_scenario.py  mock_server.py  report.html  verify_scenario.py
src/pmeter/: __init__.py  __main__.py  cli.py  csv_data.py  distributed.py  dsl.py  http.py  processors.py  report.py  runner.py  stats.py  web_ui.py
src/pmeter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: conftest.py  report.html  test_01_csv_parameterization.py  test_02_pre_post_processors.py  test_03_response_extractors.py  test_04_custom_checkpoints.py  test_05_html_report.py  test_06_distributed.py  test_07_web_ui.py  test_08_integration.py
tests/: test_all_features.py
